# conversation-memory

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  README.md  hacs.json  pyproject.toml
custom_components/conversation_memory/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json  memory.py  sensor.py  services.py  services.yaml
custom_components/conversation_memory/translations/: en.json
tests/: test_config_flow.py  test_conversation.py  test_memory.py
