[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation-memory"
version = "0.5.0"
description = "A Home Assistant custom integration for persistent Assist conversation recall."
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
  "homeassistant>=2025.12.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-homeassistant-custom-component>=0.13.0",
  "ruff>=0.8.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "PL"]
ignore = ["PLR2004"]
